# sum-subset

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rustfmt.toml  sum_subset.pyi
py/: main.py  sum_subset.cp311-win_amd64.pyd
python/: main.py
src/: lib.rs  resolver.rs  sum_subset.rs
sum_subset/: __init__.py  sum_subset.cp311-win_amd64.pyd  sum_subset.pyi
tests/: test.rs
