[package]
name = "sum-subset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sum_subset"
crate-type = ["lib", "cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
rayon = "1.10.0"
